--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -5,4 +5,11 @@ lectures:
     - title: Introduction
       xslides: lectures/00-Introduction.pdf
 
-  
+  - date: 2023-04-11
+    type:
+    content:
+      - title: Exercise 01
+        slides:
+    assignment:
+      - label: "Assignment 0: Why Generative Models"
+        link: assignment0.html
