--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -70,3 +70,12 @@ lectures:
     assignment:
       - label: reading
         link: reading3.html
+
+  - date: 2024-05-02
+    type:
+    content:
+      - title: Exercise 04
+        slides:
+    assignment:
+      - label: "Assignment 3: Restricted Boltzmann Machines"
+        link: assignment3.html
