--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -79,3 +79,14 @@ lectures:
     assignment:
       - label: "Assignment 3: Restricted Boltzmann Machines"
         link: assignment3.html
+
+  - date: 2024-05-07
+    type:
+    content:
+    - title: Generative Adversarial Networks
+      slides:
+    reading:
+    - title: "Selected resources"
+    assignment:
+        - label: reading
+          link: reading4.html
