--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -90,3 +90,12 @@ lectures:
     assignment:
         - label: reading
           link: reading4.html
+
+  - date: 2024-05-16
+    type:
+    content:
+      - title: Exercise 05
+        slides:
+    assignment:
+      - label: "Assignment 4: Variational Autoencoders"
+        link: assignment4.html
