--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -99,3 +99,14 @@ lectures:
     assignment:
       - label: "Assignment 4: Variational Autoencoders"
         link: assignment4.html
+
+  - date: 2024-05-14
+    type:
+    content:
+    - title: Evaluating Generative Models
+      slides:
+    reading:
+    - title: "Selected resources"
+    assignment:
+        - label: reading
+          link: reading5.html
