--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -141,3 +141,12 @@ lectures:
     assignment:
         - label: reading
           link: reading7.html
+
+  - date: 2024-05-30
+    type:
+    content:
+      - title: Exercise 07
+        slides:
+    assignment:
+      - label: "Assignment 6: Autoregressive Language Modeling"
+        link: assignment6.html
