--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -230,3 +230,14 @@ lectures:
     assignment:
       - label: "Assignment 10: Conditional & Guided Diffusion"
         link: assignment10.html
+
+  - date: 2024-07-02
+    type:
+    content:
+    - title: Large Language Models
+      slides:
+    reading:
+    - title: "Selected resources"
+    assignment:
+        - label: reading
+          link: reading12.html
